<?xml version="1.0"?>
<package format="2">
  <name>jointstick</name>
  <version>0.0.0</version>
  <description>The jointstick package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager_msgs</depend>
  <depend>ros_controllers</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

</package>
